@@ -246,6 +246,10 @@ BUGS FIXES
 	remains, since it will be handled incorrectly in earlier
 	versions of R).
 
+    o	as.matrix.data.frame() could fail if coercion changed the
+	dimension of one the columns (as e.g. the coercion of a "Surv"
+	object to a character vector does).
+
 
 
 
